--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,3 @@
-/**
-* Template Name: Company
-* Template URL: https://bootstrapmade.com/company-free-html-bootstrap-template/
-* Updated: Mar 17 2024 with Bootstrap v5.3.3
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
   color: #4d4643;
@@ -2334,4 +2323,32 @@ section {
   font-size: 14px;
   color: #777;
   font-weight: 500;
+}
+
+@media (max-width: 768px) {
+  #header .logo img {
+    max-height: 50px; /* Adjust logo size as needed */
+  }
+
+  .navbar ul {
+    display: block; /* Ensure that the menu shows when toggled */
+    padding: 0;
+    background: #fff;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    z-index: 999;
+  }
+
+  .navbar ul li {
+    width: 100%;
+    text-align: center;
+  }
+
+  .navbar ul a {
+    padding: 15px;
+    display: block;
+    font-size: 16px;
+  }
 }
