Made Edits to the Nav Bar to Fit on the Phone Screen 8/18 @ 1:36 pm ---- v2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,9 +121,10 @@ h6 {
   color: #47b2ea;
 }
 
-@media (max-width: 768px) {
-  .header-social-links {
-    display: none;
+@media (max-width: 999px) {
+  .header-social-links,
+  .header-social-links a {
+    display: none !important;
   }
 }
 
