Made Edits to the Nav Bar to Fit on the Phone Screen 8/18 @ 2:18 pm ---- v4

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -300,6 +300,8 @@ h6 {
 .navbar-mobile ul {
   display: block;
   position: absolute;
+  max-height: calc(35vh - 70px);
+  margin: 0;
   top: 55px;
   right: 15px;
   bottom: 15px;
