--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -619,11 +619,15 @@ section {
 
 @media (max-width: 991px) {
   .breadcrumbs {
-    margin-top: 58px;
+    margin-top: 80px;
   }
 
   .breadcrumbs .d-flex {
-    display: block !important;
+    /* display: block !important; */
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
   }
 
   .breadcrumbs ol {
