Made Edits to the Header Logo Company Name Section to remove uppercase 8/18 @ 2:45 pm ---- v7

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,7 @@ h6 {
   line-height: 1;
   font-weight: 700;
   letter-spacing: 0.5px;
-  text-transform: uppercase;
+  text-transform: none;
 }
 
 #header .logo a {
