Made Edits to the Carousel Background Image Refresh to keep the images loaded 8/18 @ 2:55 pm ---- v8

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2260,6 +2260,8 @@ section {
 #hero .carousel-item {
   background-size: cover;
   background-position: center;
+  display: block !important;
+  visibility: visible !important;
   animation: breatheAndCycle 25s infinite;
 }
 
