--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2097,7 +2097,7 @@ section {
   line-height: 1;
   font-weight: 500;
   letter-spacing: 1px;
-  text-transform: uppercase;
+  text-transform: none;
   color: #fff;
 }
 
