Uploaded Company Name at the Footer of the Page to not be in all Caps - 8/19 @ 9:28 pm ---- v10

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,10 +132,11 @@ h6 {
   color: #47b2ea;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 996px) {
   .header-social-links {
-    padding: 0 15px 0 0;
-    border-left: 0;
+    /* padding: 0 15px 0 0;
+    border-left: 0; */
+    display: none !important;
   }
 }
 
