--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,3 @@
-/**
-* Template Name: Company
-* Template URL: https://bootstrapmade.com/company-free-html-bootstrap-template/
-* Updated: Mar 17 2024 with Bootstrap v5.3.3
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
 body {
     font-family: "Open Sans", sans-serif;
     color: #4d4643;
@@ -106,6 +95,20 @@ h6 {
 
 #header .logo img {
     max-height: 40px;
+}
+@media (min-width: 1200px) {
+    .container {
+        max-width: 2000px;
+        padding-left: 65px;
+        padding-right: 65px;
+    }
+}
+@media (max-width: 900px) {
+    .container {
+        max-width: auto;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
 }
 
 /*--------------------------------------------------------------
@@ -644,6 +647,7 @@ section {
 @media (max-width: 991px) {
     .breadcrumbs {
         margin-top: 58px;
+        align-items: center;
     }
 
     .breadcrumbs .d-flex {
@@ -652,6 +656,8 @@ section {
 
     .breadcrumbs ol {
         display: block;
+        flex-wrap: nowrap;
+        display: inline;
     }
 
     .breadcrumbs ol li {
